--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>            
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,14 +27,12 @@
                             <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
                         </svg>
                     </a>
-                    <a href="https://myaccount.google.com/u/2/?hl=en&utm_source=OGB&utm_medium=act&gar=WzJd" target="_blank" rel="noopener noreferrer" aria-label="Google">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 48 48">
-                            <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.23 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.47 13.02 17.74 9.5 24 9.5z"/>
-                            <path fill="#4285F4" d="M46.08 24.55c0-1.57-.14-3.09-.41-4.55H24v9.02h12.37c-.53 2.8-2.11 5.17-4.48 6.76l7.03 5.45c4.14-3.82 6.53-9.45 6.53-16.68z"/>
-                            <path fill="#FBBC05" d="M10.54 28.59a14.48 14.48 0 0 1-.76-4.59c0-1.59.28-3.12.76-4.59L2.56 13.22A23.85 23.85 0 0 0 0 24c0 3.88.93 7.54 2.56 10.78l7.98-6.19z"/>
-                            <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.77l-7.03-5.45C30.4 38.42 27.4 39.5 24 39.5c-6.27 0-11.54-3.52-13.46-8.69l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/>
+                    <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24">
+                            <path fill="#181717" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.834 2.809 1.304 3.495.997.108-.775.418-1.305.762-1.605-2.665-.3-5.467-1.334-5.467-5.93 0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.289-1.552 3.295-1.23 3.295-1.23.655 1.653.242 2.873.12 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.922.43.37.815 1.096.815 2.21 0 1.595-.015 2.877-.015 3.267 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
                         </svg>
                     </a>
+
                         <a href="https://www.instagram.com/torremocharodney/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M16.98 0H7.02C3.14 0 0 3.14 0 7.02v9.96C0 20.86 3.14 24 7.02 24h9.96C20.86 24 24 20.86 24 16.98V7.02C24 3.14 20.86 0 16.98 0zm4.5 16.98c0 2.5-2.01 4.5-4.5 4.5H7.02c-2.5 0-4.5-2.01-4.5-4.5V7.02c0-2.5 2.01-4.5 4.5-4.5h9.96c2.5 0 4.5 2.01 4.5 4.5v9.96z"/>
@@ -306,3 +304,4 @@ pageSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
