--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section id="contact" class="page-section">
           <h2>Get In Touch</h2>
         <div class="contact-content">
-            <form class="contact-form" action="https://formspree.io/f/xeoywjjw" method="post">
+            <form id="my-form" class="contact-form" action="https://formspree.io/f/xeoywjjw" method="post">
                 <div class="form-group">
                     <input type="text" placeholder="Your Name" required>
                 </div>
@@ -333,6 +333,7 @@ pageSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
 
 
