--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
         </section>
 
-        <section id="portfolio" class="page-section">
+        <section id="portfolio" class="page-section" href="http://www.icas-clinic-care-profiling-system.page.gd/">
              <h2>My Portfolio</h2>
 
              <div class="portfolio-grid">
@@ -333,6 +333,7 @@ pageSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
 
 
