--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
              <h2>My Portfolio</h2>
 
              <div class="portfolio-grid">
-            <div class="portfolio-card" onclick="window.open('http://www.icas-clinic-care-profiling-system.page.gd', '_blank')">
+            <div class="portfolio-card" onclick="window.open('http://www.icas-clinic-care-profiling-system.page.gd')">
                 <div class="portfolio-image">
                     <img src="login.jpg" alt="Clinic Care">
                 </div>    
@@ -333,6 +333,7 @@ pageSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
 
 
